<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.shopoholicbuddy.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorMessageTitle"
            android:textSize="@dimen/_13ssp"
            app:fontName="@string/orkney_bold"
            android:text="@string/error" />

        <com.shopoholicbuddy.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorMessageText"
            android:textSize="@dimen/_12ssp"
            app:fontName="@string/orkney_regular"
            android:text="@string/network_issue"/>

        <com.shopoholicbuddy.customviews.CustomButton
            android:id="@+id/btn_retry"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/ic_button"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp"
            app:fontName="@string/orkney_bold"/>

    </LinearLayout>
</android.support.v7.widget.CardView>