<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.shopoholicbuddy.customviews.CustomTextView
            android:id="@+id/tv_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/confirm_deal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            app:fontName="@string/orkney_medium"/>

        <com.shopoholicbuddy.customviews.CustomTextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:textColor="@color/colorMessageText"
            android:textSize="@dimen/_9ssp"
            app:fontName="@string/orkney_regular"
            tools:text="@string/dummy_text_short"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center">

            <com.shopoholicbuddy.customviews.CustomButton
                android:id="@+id/btn_yes_post"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/ic_button"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/yes_post"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp"
                app:fontName="@string/orkney_bold"/>

            <com.shopoholicbuddy.customviews.CustomButton
                android:id="@+id/btn_edit_deal"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/ic_confirm_deal_edit_deal_btn"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/edit_deal"

                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp"
                app:fontName="@string/orkney_bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorSeparator"/>

        <com.shopoholicbuddy.customviews.CustomTextView
            android:id="@+id/tv_dialogue_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorMessageTitle"
            android:textSize="@dimen/_15ssp"
            app:fontName="@string/orkney_bold"/>

    </LinearLayout>
</android.support.v7.widget.CardView>