<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_login"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_year_month"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv_previous_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tv_current_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tv_next_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="-70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_week_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sun"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_mon"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_tue"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_wed"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_thu"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_fri"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day_sat"
            android:textColor="@color/colorLightWhite"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>


    <com.shopoholicbuddy.calendar.CalendarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:calendar_type="open">

        <com.shopoholicbuddy.calendar.CalendarDateView
            android:id="@+id/calendarDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_login">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.shopoholicbuddy.customviews.CustomTextView
                android:id="@+id/tv_shopper_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorLightWhite"
                android:textSize="@dimen/_17ssp"
                app:fontName="@string/orkney_bold"
                tools:text="DUMMY DATE" />

                <com.shopoholicbuddy.customviews.CustomTextView
                    android:id="@+id/tv_add_slots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/add_slots"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"
                    app:fontName="@string/orkney_bold" />

            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <include
                layout="@layout/layout_recycle_view"/>

        </LinearLayout>
    </com.shopoholicbuddy.calendar.CalendarLayout>
</LinearLayout>